# py-task-graph

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/philiprehberger_task_graph/: __init__.py
tests/: test_task_graph.py
