[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-task-graph"
version = "0.1.2"
description = "Lightweight task dependency engine with topological execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["task", "graph", "dependency", "workflow", "pipeline", "dag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-task-graph"
Repository = "https://github.com/philiprehberger/py-task-graph"
Issues = "https://github.com/philiprehberger/py-task-graph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_task_graph"]
