[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-task-graph"
version = "0.2.1"
description = "Lightweight task dependency engine with topological execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["task", "graph", "dependency", "workflow", "dag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-task-graph#readme"
Repository = "https://github.com/philiprehberger/py-task-graph"
Issues = "https://github.com/philiprehberger/py-task-graph/issues"
Changelog = "https://github.com/philiprehberger/py-task-graph/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_task_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
